--- a/options.css
+++ b/options.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Helvetica, Arial, sans serif;
+	font-family: Helvetica, Arial, sans serif; margin: 0; padding: 0;
 }
 
 a { color: #548DCB; text-decoration: none; }
@@ -7,8 +7,32 @@ a { color: #548DCB; text-decoration: none; }
 .visible { display: block; }
 .warning { display: block; color: red; font-size: 18px; }
 
+#header {
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	height: 40px;
+	padding: 5px;
+	color: white;
+	line-height: 40px;
+	font-size: 24px;
+	font-weight: lighter;
+	background: #333E4A url('header_logo.png') no-repeat 5px; 50%;
+}
+
+#header h1 {
+	position: relative;
+	display: block;
+	width: 300px;
+	font-weight: 100;
+	line-height: 40px;
+	font-size: 24px;
+	margin: 0px auto 0px auto;
+}
+
 .options {
-	margin: 50px auto;
+	position: relative;
+	margin: 60px auto;
 	padding: 20px;
 	width: 800px;
 	border: 1px solid #DDD;
@@ -24,16 +48,18 @@ a { color: #548DCB; text-decoration: none; }
 
 .optionsList li div { margin: 10px auto; }
 
-.lastImport { display: block; color: #aaa; font-size: 12px; }
+#lastImport { margin: 0; color: #aaa; font-size: 12px; }
 
-#amazon_import_options #amazon_checking_login {
-	padding-left: 20px;
+#amazon_checking_login {
+	display: inline-block;
+	font-size: 12px;
+	color: #555;
+	margin-left: 10px;
+	padding-left: 18px;
 	background:  url('spinner_small.gif') no-repeat 0px 0px;
 }
 #amazon_import_options #amazon_logged_in select { display: inline-block; }
-#amazon_import_options .amazon_import_interval_disabled { color: #555; }
-#amazon_import_options .amazon_import_interval_enabled.hidden { display: none; }
-#amazon_import_options .amazon_import_interval_disabled.hidden { display: none; }
-
 #amazon_logged_out { display: none; }
 #findings_logged_out { display: none; }
+#devopt { display: none;}
+#refresh_options { display: block; margin: 10px 0 0 0;}
