--- a/notifications.css
+++ b/notifications.css
@@ -3,20 +3,20 @@
 a { color: #548DCB; }
 
 #message {
-	background: transparent url('findings-icon-32x32.gif') no-repeat left top;
+	background: transparent url('icon-32x32.png') no-repeat left top;
 	padding-left: 37px;
 	margin-bottom: 10px;
 	min-height: 32px;
 }
 
 #message.small {
-	background: transparent url('findings-icon-16x16.gif') no-repeat left top;
+	background: transparent url('icon-16x16.png') no-repeat left top;
 	min-height: 16px;
 	padding-left: 21px;
 }
 
 #message.big {
-	background: transparent url('findings-icon-86x86.gif') no-repeat left top;
+	background: transparent url('icon-86x86.png') no-repeat left top;
 	min-height: 86px;
 	padding-left: 91px;
 }
