--- a/options.css
+++ b/options.css
@@ -13,11 +13,11 @@ a { color: #548DCB; text-decoration: none; }
 	width: 100%;
 	height: 40px;
 	padding: 5px;
-	color: white;
+	color: black;
 	line-height: 40px;
 	font-size: 24px;
 	font-weight: lighter;
-	background: #333E4A url('header_logo.png') no-repeat 5px; 50%;
+	background: white url('header_logo.png') no-repeat 5px; 50%;
 }
 
 #header h1 {
@@ -48,6 +48,13 @@ a { color: #548DCB; text-decoration: none; }
 
 .optionsList li div { margin: 10px auto; }
 
+#loginframe {
+	display: block;
+	height: 100px;
+	width: 100%;
+	border: 0;
+}
+
 #lastImport { margin: 0; color: #aaa; font-size: 12px; }
 
 #amazon_checking_login {
@@ -75,6 +82,5 @@ a { color: #548DCB; text-decoration: none; }
 
 #amazon_import_options #amazon_logged_in select { display: inline-block; }
 #amazon_logged_out { display: none; }
-#findings_logged_out { display: none; }
 #devopt { display: none;}
 #refresh_options { display: block; margin: 10px 0 0 0;}
