--- a/options.css
+++ b/options.css
@@ -30,12 +30,39 @@ a { color: #548DCB; text-decoration: none; }
 	margin: 0px auto 0px auto;
 }
 
+
 .options {
 	position: relative;
 	margin: 60px auto;
 	padding: 20px;
 	width: 800px;
 	border: 1px solid #DDD;
+}
+
+.devopt {
+	background-color: yellow;
+}
+
+.options.findings {
+	height: 300px;
+}
+
+.options.findings.logged_in {
+	height: 650px;
+}
+
+#loginframe {
+	display: block;
+	height: 100px;
+	width: 100%;
+	border: 0;
+}
+
+#settingsframe {
+	display: block;
+	height: 600px;
+	width: 100%;
+	border: 0;
 }
 
 .optionsList {
@@ -47,13 +74,6 @@ a { color: #548DCB; text-decoration: none; }
 .optionsList li { display: block; margin: 20px auto; }
 
 .optionsList li div { margin: 10px auto; }
-
-#loginframe {
-	display: block;
-	height: 100px;
-	width: 100%;
-	border: 0;
-}
 
 #lastImport { margin: 0; color: #aaa; font-size: 12px; }
 
