--- a/options.css
+++ b/options.css
@@ -1,5 +1,6 @@
 body {
 	font-family: Helvetica, Arial, sans serif; margin: 0; padding: 0;
+    background: #000;
 }
 
 a { color: #548DCB; text-decoration: none; }
@@ -7,6 +8,22 @@ a { color: #548DCB; text-decoration: none; }
 .visible { opacity: 0; }
 .warning { display: block; color: red; font-size: 18px; }
 
+#content {
+    background: url('white_scratch.png');
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 1.5em;
+    margin-top: 30px;
+}
+h2{
+    text-align: center;
+    margin: 0px auto;
+}
+#options {
+    max-width: 450px;
+    margin: 0 auto;
+    padding: 1.5em;
+}
 #header {
 	position: absolute;
 	top: 0px;
