--- a/options.css
+++ b/options.css
@@ -36,6 +36,14 @@ h3{
     margin: 0px 0px 10px 0px;
 }
 
+.option_item:before {
+    content:'\00B6';
+    font-size: 10px;
+    vertical-align: 2px;
+    margin-right: 4px;
+    color: #777;
+}
+
 .options_group{
     background: rgba(215, 215, 215, 0.15);
     padding: 5px 20px;
@@ -57,4 +65,17 @@ h3{
     font-size: 0.8em;
     padding: 0.6em;
     text-transform: uppercase;
+}
+
+#quick_clip_key {
+    width: 30px;
+    border: 2px solid #999;
+    text-align: center;
+    margin-left: 10px;
+    vertical-align: text-bottom;
+    color: #666;
+}
+
+#quick_clip_key.active {
+    border: 2px solid #99F;
 }
