Activate the close highlight-bar function

--- a/src/highlighter.css
+++ b/src/highlighter.css
@@ -7,6 +7,10 @@
     border-bottom: none;
     }
 
+.findings-highlight.disabled {
+    background: none;
+}
+
 #findings-control {
     position: fixed;
     top: 30px;
