--- a/src/highlighter.css
+++ b/src/highlighter.css
@@ -3,7 +3,7 @@
     -webkit-transition: background 0.1s linear;
     }
 .findings-highlight.active {
-    background: rgba(255, 242, 51, 0.8);
+    background: rgba(255, 242, 51, 0.6);
     border-bottom: none;
     }
 
@@ -13,7 +13,7 @@
 
 #findings-control {
     position: fixed;
-    top: 40px;
+    top: 30px;
     right: 0;
     z-index: 2147483647;
     background: rgba(255,255,255,0.8);
@@ -49,20 +49,22 @@
     }
 #findings-control .close_highlight_box {
     display: block;
-    width: 17px;
-    height: 17px;
+    width: 21px;
+    height: 21px;
     float: left;
-    background: rgba(255,255,255,0.8);
+    border-radius: 21px;
+    background-color: #eee;
     box-sizing: border-box;
-    background-position: -96px 5px;
+    background-position: -94px 6px;
     position: absolute;
-    top: 0;
-    right: 0;
-    opacity: 0.8;
+    top: -12px;
+    left: -12px;
+    opacity: 1;
+    box-shadow: 0 0 2px rgba(0,0,0,0.5);
     }
 #findings-control .close_highlight_box:hover {
-    background-color: #bbb;
-    background-position: -96px -45px;
+    background-position: -94px -44px;
+    background-color: #ccc;
     opacity: 1;
 }
 #findings-control .highlighter_box {
@@ -75,6 +77,7 @@
     background-position: -143px 8px;
     clear: both;
     cursor: pointer;
+    display: none;
     }
 #findings-control .highlighter_box:hover {
     background-color: #bbb;
