--- a/src/highlighter.css
+++ b/src/highlighter.css
@@ -49,22 +49,22 @@
     }
 #findings-control .close_highlight_box {
     display: block;
-    width: 21px;
-    height: 21px;
+    width: 20px;
+    height: 20px;
     float: left;
-    border-radius: 21px;
-    background-color: #eee;
+    border-radius: 20px;
+    background-color: #ddd;
     box-sizing: border-box;
     background-position: -94px 6px;
     position: absolute;
-    top: -12px;
-    left: -12px;
+    top: -15px;
+    left: 7px;
     opacity: 1;
     box-shadow: 0 0 2px rgba(0,0,0,0.5);
     }
 #findings-control .close_highlight_box:hover {
     background-position: -94px -44px;
-    background-color: #ccc;
+    background-color: #bbb;
     opacity: 1;
 }
 #findings-control .highlighter_box {
