--- a/src/highlighter.css
+++ b/src/highlighter.css
@@ -118,7 +118,7 @@
     -webkit-transition: background 0.1s linear;
 }
 #findings-control .fndgs_person {
-    background-size: auto 35px;
+    background-size: cover;
     width: 35px;
     height: 35px;
     clear: both;
@@ -251,9 +251,9 @@
 
 .findings-comments .findings-comment .fndgs_comment-image {
     height: 30px;
-    margin-top: 3px;
+    margin-top: 2px;
     width: 30px;
-    background-size: 100% auto;
+    background-size: cover;
     background-position: center center;
     display: inline-block;
 }
